--- a/src/index.haml
+++ b/src/index.haml
@@ -8,6 +8,6 @@
 		%title indexPage
 	%body{"ng-app"=>"app"}
 		%div{"ng-view"=>""}
-		%script{:src=>"script/app.js"}
 		%script{:src=>"bower_components/angular/angular.min.js"}
 		%script{:src=>"bower_components/angular-route/angular-route.min.js"}
+		%script{:src=>"scripts/app.js"}
